Add short motivation section

--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,7 @@
 \section {Abstract}
 
 \section {Motivation}
-
+With the rise of social networks, many researchers have poured over the data produced to find explore the connections between friends, text, and social interactions. While much research has been done on networks such as Twitter and Facebook, Reddit has remained largely ignored. The different structure of Reddit allows for an opportunity to look at different questions and a different style of conversation. Because Reddit users can label comments and posts as good or bad by voting, we can attempt to predict the interests of reddit users. 
 \section {Related Work}
 
 \section {Results}
