--- a/report.tex
+++ b/report.tex
@@ -13,7 +13,7 @@
 
 \section{What is Reddit?}
 
-Reddit is a popular online link aggregation website. It allows user to post links to other webpages, images, videos, and more and to vote on the popularity of these submissions. Popular submissions are 'Upvoted' while unpopular ones are 'Downvoted'. Users are also allowed to comment on and discuss submissions. Comments, like submissions, are also subject to be voted on. Some of the key vocabulary of reddit is listed below.
+Reddit is a popular online link aggregation website. It allows user to post links to other webpages, images, videos, and more and to vote on the popularity of these submissions. Popular submissions are `Upvoted' while unpopular ones are `Downvoted'. Users are also allowed to comment on and discuss submissions. Comments, like submissions, are also subject to be voted on. Some of the key vocabulary of reddit is listed below.
 \\
 \\
 \textbf{post:} Also know as a submission is a link to another webpage. This webpage may be news article, a blog post, an image, a video, etc. All posts contain a comment section where user are allowed to discuss the submission.
