--- a/report.tex
+++ b/report.tex
@@ -1,39 +1,53 @@
-\documentclass[11pt,twocolumn]{article}
+\documentclass[10pt,twocolumn]{article}
 \usepackage{amsthm, amssymb, geometry, mathrsfs}
 \usepackage[T1]{fontenc}
+\usepackage{graphicx}
+\usepackage{multicol}% http://ctan.org/pkg/multicols
 
 \title {COMP 598: Something Something Reddit}
-
-\author {Xavier Denis, Ian Forbes, Dave Liu}
+\author {Xavier Denis, Ian Forbes, Liu Liu}
 
 \begin {document}
+
+\twocolumn[
 \maketitle
-
 \section{Abstract}
-
+We collected a new machine learning dataset from the online social network Reddit. The dataset consisted of the top 100 posts from 2014, along with their comments from 10 subreddits. We implemented a naive Bayes classifier to classify the subreddit which the comment belongs. The binary classification performance of the naive Bayes was 89\% from 10-fold cross validation with around 700 comments. The multi-class classification performance with 6 classes using 150-900 comments per class was 75\%. This work can be potentially useful in the future to implement an algorithm to recommend subreddit for users based on their comment histories.
+\\
+\\
+]
 \section{What is Reddit?}
 
 Reddit is a popular online link aggregation website. It allows user to post links to other webpages, images, videos, and more and to vote on the popularity of these submissions. Popular submissions are 'Upvoted' while unpopular ones are 'Downvoted'. Users are also allowed to comment on and discuss submissions. Comments, like submissions, are also subject to be voted on. Some of the key vocabulary of reddit is listed below.
 \\
 \\
-\textbf{post:} Also know as a submission is a link to another webpage. This webpage may be news article, a blog post, an image, a video, etc. All posts contain a comment section where user are allowed to discuss the submission.
+\textbf{post:} Also know as a submission is a link to another webpage. This webpage may be a news article, a blog post, an image, a video, etc. All posts contain a comment section where user are allowed to discuss the submission.
 \\
 \textbf{self post:} Is a special type of post where a user writes their own text submission. This is often used to started discussions or ask questions in a given subreddit. 
 \\
 \textbf{subreddit:} A subsection of reddit dedicated to a certain topic. 
 \\
 \textbf{upvote/downvote:} The action of voting on the popularity of a post or comment.
-
+\\
+\textbf{top level comment:} The root of a comment tree
 \section{Motivation}
 With the rise of social networks, many researchers have poured over the data produced to find explore the connections between friends, text, and social interactions. While much research has been done on networks such as Twitter and Facebook, Reddit has remained largely ignored. The different structure of Reddit allows for an opportunity to look at different questions and a different style of conversation. Because Reddit users can label comments and posts as good or bad by voting, we can attempt to predict the interests of reddit users. 
 
-
 One advantage of using Reddit as a data source is that one, all content is publicly available, and two, it has an easy to use REST API. This allowed us to collection vast amount of JSON formatted data. 
 
+\begin{figure*}
+  	\includegraphics[scale=0.4,trim=300 0 300 0]{./sports_freq.png}
+  	\caption{Word frequency of the Sports subreddit.}
+  	\label{fig:RSUencountered}
+\end{figure*}
+
+
 \section{Related Work}
-Due to the lack of studies related to Reddit there are few related datasets or papers. A search through Google Scholar produces few results and the the top rated links are only listed because of share buttons on the paper's hosting page. Most of the related research we found was University projects like our own. We could not find any published papers or data.
+Due to the lack of studies related to Reddit there are few related datasets or papers. A search through Google Scholar produces few results and the top links are only listed because of share buttons on the paper's hosting site. Most of the related research we found was University projects like our own. We could not find any published papers or data.
 
 That being said we did find an interesting analysis that aimed to predict the popularity of a self post based on its Flesch-Kincaid readability. This project found a correlation between how easy a self post was to read and how popular it would be. In particular posts with moderate readability where more popular than others with easy or hard readability.
+
+
 
 \section{Dataset Description}
 
@@ -44,6 +58,12 @@ In order to train our naive Bayes classifier we had to flatten the comments and 
 \section{Results}
 		
 \section{Discussion}
+
+Overall our results were quite positive. On possible use of our classifier would be to recommend new subreddits to users based on their comment history. Each user's comments are publicly available on their profile so it would be very easy to classify each of the comments into a given subreddit. If a user's comments where consistently classified into a small subset of subreddits it is possble that they may be interested in that subreddit. 
+
+We hereby state that all the work presented in the report is that of the authors.
+
+\section{References}
 
 \section{Appendix}
 
