--- a/report.tex
+++ b/report.tex
@@ -72,6 +72,13 @@ Therefore, if there are no words from that class, the prior probability will be 
 
 \section{Results}
 		
+\begin{figure}
+    \centering
+  	\includegraphics[scale=0.5]{./varyWBaseline.png}
+  	\caption{Word frequency of the Sports subreddit.}
+  	\label{fig:RSUencountered}
+\end{figure}		
+		
 \section{Discussion}
 The final dataset and features are accurate when classifying but could still be improved. There were several issues during tokenization where standard approaches would fail due to reddit's internal culture. The frequent use of non-textual unicode characters to encode emojis and other information wouldn't be captured by pure word tokenization. Additionally, the presence of Markdown for text formatting adds another level of complexity to the word extraction. We settled on stripping markdown formatting through regexes before splitting on spaces and stemming words. However, there a few issues with things such as `l33tspeak' where numbers are subsistuted for letters, causing use to not recognize identical words. 
 
