--- a/report.tex
+++ b/report.tex
@@ -3,6 +3,8 @@
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
+\usepackage[style=ieee]{biblatex}
+\addbibresource{citations.bib}
 \usepackage{multicol}% http://ctan.org/pkg/multicols
 
 \title {COMP 598: Something Something Reddit}
@@ -30,9 +32,9 @@ Reddit is a popular online link aggregation website. It allows user to post link
 \end {enumerate}
 
 \section{Motivation}
-With the rise of social networks, many researchers have poured over the data produced to find explore the connections between friends, text, and social interactions. While much research has been done on networks such as Twitter and Facebook, Reddit has remained largely ignored. The different structure of Reddit allows for an opportunity to look at different questions and a different style of conversation. Because Reddit users can label comments and posts as good or bad by voting, we can attempt to predict the interests of reddit users. 
+With the rise of social networks, many researchers have poured over the data produced to find explore the connections between friends, text, and social interactions. While much research has been done on networks such as Twitter and Facebook, Reddit has remained largely ignored. The different structure of Reddit allows for an opportunity to look at different questions and a different style of conversation. Because Reddit users can label comments and posts as good or bad by voting, we can attempt to predict the interests of reddit users.
 
-One advantage of using Reddit as a data source is that one, all content is publicly available, and two, it has an easy to use REST API. 
+One advantage of using Reddit as a data source is that one, all content is publicly available, and two, it has an easy to use REST API\cite{reddit}. 
 
 \begin{figure*}
     \centering
@@ -56,7 +58,7 @@ In order to train our naive Bayes classifier we had to flatten the comments and 
 We used a Naive Bayes classifier with single words (unigrams) as the features. Our choice of this classifier with the given feature set stems from the fact that the feature space, all words, is extremely large so naive Bayes' linear complexity with respect to the number of features was highly desirable. Our choice of feature set stems for the simplicity of extracting the features. Splinting words on spaces and extracting punctuation is a very fast and easy task. Other possible features set that we considered but dit not adopted where bigrams and term frequency–inverse document frequency (tf-idf). On difficulty with bigrams is that increase the sparseness of our features. Also the nature of most reddit comments, short - with poor spelling, grammar, and punctuation, weighs against the usefulness of bi-grams when compared to uni-grams. TF-IDF, which compares the ratio between the frequency of a word in a document and its total frequency is the corpus, is another way to calculate the word frequency but penalizes word that are common among all documents in the corpus. Unfortunately we only learned of this method towards the deadline and did not have time to implement it.
 
 Therefore, the combination of words will not likely to appear in the text data to generate models of P(x|y) and apply generative learning (e.g. LDA) to text data classification.
-Naive Bayes assume the $x$ are conditionally independent given $y$ and simplifies the problem.
+Naive Bayes assume the $x$ are conditionally independent given $y$ and simplifies the problem.\autocite{jordan2002discriminative}
 
 \begin{figure}
   	\includegraphics[scale=1.0]{./sysmag_bayes.png}
@@ -87,7 +89,7 @@ Overall our results were quite positive. On possible use of our classifier would
 We hereby state that all the work presented in the report is that of the authors.
 
 \section{References}
-
+\printbibliography
 \section{Appendix}
 
 \end{document}
