--- a/citations.bib
+++ b/citations.bib
@@ -9,6 +9,24 @@
 @online{reddit,
   title = {Reddit API DOCUMENTATION},
   author = {Reddit Inc.},
+  year = 2014,
   url = {http://www.reddit.com/dev/api},
   note = {Accessed: 2014-09-23},
+}
+@article{salton1983introduction,
+  title={Introduction to modern information retrieval},
+  author={Salton, Gerard and McGill, Michael J},
+  year={1983}
+}
+@online{
+  url = {https://github.com/bcjordan/Reddit-Machine-Learning},
+  year = 2014,
+  title = {Reddit Machine Learning},
+  note = {Accessed: 2014-09-23}
+}
+@techreport{joachims1996probabilistic,
+  title={A Probabilistic Analysis of the Rocchio Algorithm with TFIDF for Text Categorization.},
+  author={Joachims, Thorsten},
+  year={1996},
+  institution={DTIC Document}
 }
