Add more results section

--- a/citations.bib
+++ b/citations.bib
@@ -18,7 +18,7 @@
   author={Salton, Gerard and McGill, Michael J},
   year={1983}
 }
-@online{
+@online{bcjordan,
   url = {https://github.com/bcjordan/Reddit-Machine-Learning},
   year = 2014,
   title = {Reddit Machine Learning},
