--- a/report.tex
+++ b/report.tex
@@ -60,6 +60,13 @@ We used a Naive Bayes classifier with single words (unigrams) as the features. O
 Therefore, the combination of words will not likely to appear in the text data to generate models of P(x|y) and apply generative learning (e.g. LDA) to text data classification.
 Naive Bayes assume the $x$ are conditionally independent given $y$ and simplifies the problem.\autocite{jordan2002discriminative}
 
+Multi-class classification
+We used a single classifier to compute P(y|x) for each class, and selected the class with highest probability.
+The other option is to use k different 1-vs-all binary classifiers. However, this method is computationally slower since many classifiers need to be learned, and the binary classes are imbalanced as the target class has relatively fewer data points compared to the aggregation of all the other classes.
+
+Cross-validation
+10-fold cross validation of the data was used to evaluate performance.
+
 \begin{figure}
     \centering  
   	\includegraphics[width=0.5\textwidth]{./sysmag_bayes.png}
@@ -79,13 +86,8 @@ Therefore, if there are no words from that class, the prior probability will be 
   \caption{ Binary classification performance as a function of the amount of data. There were a total of 35000 and 45000 comments in the two subreddits sports and books respectively. The performance was measure by 10-fold cross validation on the test data. The error bars represent the standard error of the 10 samples collected in the cross validation.}
   	\label{multiclass}
     \end{figure}
+We measured good classification performance, attaining approximately $80\%$ performance (Fig \ref{multiclass}) when looking at the binary classification of two groups. As the amount of classes increased, the performance dropped but stayed well above that of a random classifier (Fig \ref{classes}). Most importantly, by using a single classifier we avoided biasing the results towards any one class, resulting in a fairly uniform confusion matrix (Fig \ref{confusion}). The amount of data in each class varied a lot but from this matrix we can see that there is no one class that was significantly more fitted than the others. 
 
-Multi-class classification
-We used a single classifier to compute P(y|x) for each class, and selected the class with highest probability.
-The other option is to use k different 1-vs-all binary classifiers. However, this method is computationally slower since many classifiers need to be learned, and the binary classes are imbalanced as the target class has relatively fewer data points compared to the aggregation of all the other classes.
-
-Cross-validation
-10-fold cross validation of the data was used to evaluate performance.
 
 \begin{figure}
     \centering
@@ -97,8 +99,8 @@ Cross-validation
 \begin{figure}
     \centering
   	\includegraphics[width=0.5\textwidth]{./varyWBaseline.png}
-  	\caption{Classifier accuracy vs chance.}
-  	\label{}
+  	\caption{Classifier performance as class count increases.}
+  	\label{classes}
 \end{figure}	
 
 \begin{figure}
